--- a/assets/main.css
+++ b/assets/main.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Montserrat&family=Overpass&display=swap');
 
+* {
+  -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
+}
+
 body {
-  background-color: #121212;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
-  font-family: 'Merienda', cursive;
   margin: 0;
   padding: 0;
 }
